# WiiDevEnv

./: .env  .gitignore  Cargo.toml  Dockerfile  Dolphin.ini  Earthfile  HOW_TO.md  LICENSE.md  Logger.ini  Makefile  README.md  build.rs  build_watch  docker-compose.yaml  install_rust  powerpc-unknown-eabi.json  start_dev_env  wrapper.h
.github/workflows/: build.yml  ci.yml  unit_test.yml
app/: Cargo.toml  build.rs
app/.cargo/: config.toml
app/data/: Cartridge.fbx  Cartridge.mtl
app/gamelib/: Cargo.toml
app/gamelib/src/: lib.rs  plot.rs
app/gamelib/src/data_store/: asset_name.rs  mod.rs  textured_model_name.rs
app/gamelib/src/data_store/data/: Plate.mtl
app/gamelib/src/game/: mod.rs
app/gamelib/src/game_state/: game_state_name.rs  mod.rs  system_name.rs
app/gamelib/src/game_state/changes/: controls.rs  mod.rs  motion.rs
app/gamelib/src/game_state/components/: audio.rs  controller_assignment.rs  game.rs  mod.rs  motion.rs  physics.rs  render.rs
app/gamelib/src/game_state/systems/: actions.rs  audio.rs  gamemaster.rs  mod.rs  motion.rs  physics.rs  render.rs  score.rs  system_name.rs
app/gamelib/src/game_states/: bouncing_cubes.rs  bounding_cubes.rs  mod.rs  moving_platform_test.rs
app/gamelib/src/servers/: audio.rs  mod.rs  renderer.rs
app/grrustlib/: Cargo.toml  build.rs  wrapper.h
app/grrustlib/src/: grrlib.rs  inline.rs  lib.rs
app/integration/: main.rs
app/lib/: Cargo.toml
app/lib/.cargo/: config.toml
app/lib/src/: game.rs  lib.rs
app/modulator/: Cargo.toml
app/modulator/src/: lib.rs  sources.rs
app/ogglib/: .gitignore  Cargo.toml  build.rs  wrapper.h
app/ogglib/src/: lib.rs  oggplayer.rs
app/physicslib/: Cargo.toml  build.rs  powerpc-unknown-eabi.json  wrapper.h
app/physicslib/.cargo/: config.toml
app/physicslib/src/: lib.rs  physics.rs
app/src/: change_provider.rs  controller.rs  game.rs  input.rs  main.rs  plot.rs  raw_data_store.rs  renderer.rs
app/src/audio/: audio.rs  audio_player.rs  mod.rs  ogg_player.rs  ogg_server.rs
app/src/modulator/: mod.rs  sources.rs
app/src/renderer/: display_cache.rs  grrlib.rs  grrustlib.rs  indexed_model.rs  indexed_model_factory.rs  mod.rs  model_factory.rs  renderer.rs  texture.rs  textured_model.rs
app/src/renderer/grrustlib/: inline.rs
app/src/rendering/: display_cache.rs  mod.rs  model_factory.rs  render_server.rs  renderer.rs  texture.rs  textured_model.rs
app/src/target_tests/: mod.rs  test_display_cache.rs  test_model_factory.rs
blender/: Frypan.blend  Frypan.blend1  OilBubble.blend  OilBubble.blend1  OilSea.blend  OilSea.blend1  SweetPotato.blend  hand.blend  hand.blend1  hand_fist.mtl  hand_holding.mtl  hand_one.mtl  hand_three.mtl  hand_two.mtl  plate.blend  plate.blend1  potato.blend  potato.blend1
docker/: docker-compose.yaml
docker/build_watch/: build_watch.sh
docker/builder/: Dockerfile  build_watch.sh  install_rust.sh
docker/devkitpro/: install-devkitpro-pacman.sh
docker/emulator/: Dockerfile  start_emulator.sh
docker/headless_dolphin/: README.md
docker/headless_dolphin/dolphin-emu/Config/: Dolphin.ini  Logger.ini  Qt.ini  WiimoteNew.ini
docker/oggplayer/: Makefile  oggplayer.c  oggplayer.h
docker/tiny_physics/: .gitignore  Makefile  tiny_physics.c  tiny_physics.h
grrlib/: Cargo.toml  build.rs  powerpc-unknown-eabi.json  wrapper.h
grrlib/src/: lib.rs
homebrew-channel/: meta.xml
python_support/: plot_logs.py
source/: bindings.rs  main.c  main.rs  template.c
source/game/: bindings.rs  lib.rs
src/: game.rs  grrlib.rs  main.rs  renderer.rs
src/renderer/: inline.rs
