[package]
name = "rust-wii"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-wii"
path = "src/main.rs"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", opt-level = "s" }

[dependencies]
ogc-rs = {git = "https://github.com/rust-wii/ogc-rs.git"}
grrlib = {path = "grrlib", features = ["ffi"]}