[package]
name = "rust-wii"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-wii"
path = "src/main.rs"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", opt-level = "s" }

[dependencies]
ogc-rs = {git = "https://github.com/rust-wii/ogc-rs.git"}
libc = "0.2"
hecs = { version = "0.9.0", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"], default-features = false }
num = { version = "0.4.0", default-features = false}

[build-dependencies]
bindgen = "0.61"
regex = "1.5"