[package]
name = "rust-wii"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-wii"
path = "src/main.rs"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", lto = true, codegen-units = 1, strip = "symbols", opt-level = "s" }

[dependencies]
ogc-rs = {git = "https://github.com/rust-wii/ogc-rs.git", branch = "develop"}
libc = "0.2"
hecs = { version = "0.9.0", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"], default-features = false }
num = { version = "0.4.0", default-features = false}
wavefront = { version = "0.2.3", default-features = false}
hashbrown = { version = "0.13.1" } # no_std hashmaps
gamelib = { path = "./gamelib", features = ["wii"]}
grrustlib = { path = "./grrustlib" }
ogglib = { path = "./ogglib" }
modulator = { path = "./modulator", features = []}
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
micromath = { version = "1.0.1" }
strum = { version = "0.24.1", default-features = false }
strum_macros = "0.24"

[features]
run_target_tests = []