[package]
name = "grrlib"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for GRRLIB"

[lib]
crate-type = ["rlib"]

[features]
ffi = []
mmio = []
glam_compat = ["glam"]

[dependencies]
bitflags = "1.3"
num_enum = { version = "0.5", default-features = false }
cfg-if = "1.0"
cstr_core = "0.2"
libm = "0.2"
libc = "0.2"
ogc-sys = "0.1.1"
glam = { version = "0.19.0", default-features = false, features = ["libm"], optional = true }
voladdress = "0.4"
bit_field = "0.10.1"

[build-dependencies]
bindgen = "0.61"
regex = "1.5"