[package]
name = "gamelib"
version = "0.1.0"
edition = "2021"

[lib]
name="gamelib"

[dependencies]
ogc-rs = {git = "https://github.com/rust-wii/ogc-rs.git", optional = true}
hecs = { version = "0.9.0", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"], default-features = false }
num = { version = "0.4.0", default-features = false}


[features]
default = []
wii = ["dep:ogc-rs"] # When enabled, build in 'wii mode', swapping the std out for ogc_rs