[package]
name = "rust-wii-lib"
version = "0.1.0"
edition = "2021"

[lib]
name="rust_wii_lib"

[dependencies]
ogc-rs = {git = "https://github.com/rust-wii/ogc-rs.git", optional = true}
hecs = { version = "0.9.0", default-features = false }


[features]
default = []
wii = ["dep:ogc-rs"] # When enabled, build in 'wii mode', swapping the std out for ogc_rs